--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-gradient-container": "^1.2.4",
+    "react-parallax": "^2.0.1",
     "react-scripts": "2.1.1",
     "styled-components": "^4.1.1"
   },
